--- a/index.html
+++ b/index.html
@@ -1,36 +1,223 @@
 <!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
-    <title>Wordpress Интенсив</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <section class="promo">
-        <div class="container">
-            <div class="logo">
-                <img src="icons/logo.png" alt="logo" class="logo_img">
-                <div class="logo_text">WordPress интенсив</div>
-
-                <h1 class="title">Создать свой сайт на WORDPRESS</h1>
-                <div class="simple">
-                <h2 class="title_big">это просто!</h2>
-                <div class="line"></div>
-            </div>
-            <h2 class="title">Куда сложнее сделать это правильно!</h2>
-
-            <div class="promo_text">Ежедневно в России появляется более 5 000 новых сайтов. <br>
-                И только единицы из них становятся популярными и приносят ощутимую прибыль. 
-                В чем секрет? В чем формула успеха? Узнайте на предстоящем двухдневном <span>БЕСПЛАТНОМ</span> интенсиве!</div>
-
-                <button class="promo_btn">Записаться на интенсив!</button>
-
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+      ,
+      shrink-to-fit="0"
+    />
+    <title>Bootstrap demo</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Dropdown
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled">Disabled</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success" type="submit">
+              Search
+            </button>
+          </form>
         </div>
-        
-    </section>
-    
-</body>
+      </div>
+    </nav>
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="card mt-5" style="width: 18rem">
+            <img
+              src="https://fikiwiki.com/uploads/posts/2022-02/1645026551_46-fikiwiki-com-p-kartinki-brontozavr-53.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">brontozavr1</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card mt-5" style="width: 18rem">
+            <img
+              src="https://i.kinja-img.com/gawker-media/image/upload/s--rLb17iys--/18ktphyez52kojpg.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">brontozavr2</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go anywhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card mt-5" style="width: 18rem">
+            <img
+              src="https://www.macmillandictionary.com/external/slideshow/full/brontosaurus_full.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">brontozavr3</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go everywhere</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+              <div class="card mt-5" style="width: 18rem">
+                <img
+                  src="https://fikiwiki.com/uploads/posts/2022-02/1645026551_46-fikiwiki-com-p-kartinki-brontozavr-53.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">brontozavr1</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make up
+                    the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card mt-5" style="width: 18rem">
+                <img
+                  src="https://i.kinja-img.com/gawker-media/image/upload/s--rLb17iys--/18ktphyez52kojpg.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">brontozavr2</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make up
+                    the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go anywhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card mt-5" style="width: 18rem">
+                <img
+                  src="https://www.macmillandictionary.com/external/slideshow/full/brontosaurus_full.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">brontozavr3</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make up
+                    the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go everywhere</a>
+                </div>
+              </div>
+            </div>
+      </div>
+
+      <div id="carouselExample" class="carousel slide mt-5 mb-5">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://gas-kvas.com/uploads/posts/2022-06/1655255133_2-gas-kvas-com-p-brontozavr-foto-zhivotnoe-2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="https://gas-kvas.com/uploads/posts/2022-06/1655255154_14-gas-kvas-com-p-brontozavr-foto-zhivotnoe-15.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="https://ic.pics.livejournal.com/sevastian_mos/84967891/1535601/1535601_800.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
